RESOLVED FIXED68799
WebViewDestruction tests and related code don't match TestWebKitAPI conventions
https://bugs.webkit.org/show_bug.cgi?id=68799
Summary WebViewDestruction tests and related code don't match TestWebKitAPI conventions
Adam Roben (:aroben)
Reported 2011-09-26 06:02:54 PDT
WebViewDestruction tests and related code don't match TestWebKitAPI conventions
Attachments
Patch (12.22 KB, patch)
2011-09-26 06:03 PDT, Adam Roben (:aroben)
levin: review+
Adam Roben (:aroben)
Comment 1 2011-09-26 06:03:23 PDT
Adam Roben (:aroben)
Comment 2 2011-09-26 08:57:17 PDT
Dmitry Lomov
Comment 3 2011-09-26 09:16:06 PDT
So great to see this!
Note You need to log in before you can comment on or make changes to this bug.