Clean up code imported from WebKitAPITest

Fixes <http://webkit.org/b/68799> WebViewDestruction tests and related code don't match
TestWebKitAPI conventions

Reviewed by David Levin.

* TestWebKitAPI/Tests/WebKit/win/WebViewDestruction.cpp: Changed tests to use gtest macros
and to share functionality via test fixtures. Prefixed Win32 API calls with ::. Updated
namespace name.

(TestWebKitAPI::WebViewDestruction::SetUp):
(TestWebKitAPI::WebViewDestruction::webViewCount):
(TestWebKitAPI::WebViewDestructionWithHostWindow::SetUp):
(TestWebKitAPI::WebViewDestruction::runMessagePump):
(TestWebKitAPI::WebViewDestruction::TearDown):
(TestWebKitAPI::WebViewDestructionWithHostWindow::TearDown):
Moved functionality from free functions into these new test fixtures.

* TestWebKitAPI/win/HostWindow.cpp:
* TestWebKitAPI/win/HostWindow.h:
Prefixed Win32 API calls with ::. Updated namespace name.

Canonical link: https://commits.webkit.org/84771@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95955 268f45cc-cd09-0410-ab3c-d52691b4dbfc