Tools/TestWebKitAPI/Tests/WebKit/win/WebViewDestruction.cpp
@@ -31,9 +31,7 @@
 #include <WebKit/WebKitCOMAPI.h>
 #include <wtf/PassOwnPtr.h>
 
-#define TEST_ASSERT(x) ASSERT_TRUE(x)
-
-namespace WebKitAPITest {
+namespace TestWebKitAPI {
 
 template <typename T>
 static HRESULT WebKitCreateInstance(REFCLSID clsid, T** object)
@@ -41,7 +39,32 @@ static HRESULT WebKitCreateInstance(REFCLSID clsid, T** object)
     return WebKitCreateInstance(clsid, 0, __uuidof(T), reinterpret_cast<void**>(object));
 }
 
-static int webViewCount()
+class WebViewDestruction : public ::testing::Test {
+protected:
+    virtual void SetUp();
+    virtual void TearDown();
+
+    static int webViewCount();
+    static void runMessagePump(DWORD timeoutMilliseconds);
+
+    COMPtr<IWebView> m_webView;
+};
+
+class WebViewDestructionWithHostWindow : public WebViewDestruction {
+protected:
+    virtual void SetUp();
+    virtual void TearDown();
+
+    HostWindow m_window;
+    HWND m_viewWindow;
+};
+
+void WebViewDestruction::SetUp()
+{
+    EXPECT_HRESULT_SUCCEEDED(WebKitCreateInstance(__uuidof(WebView), &m_webView));
+}
+
+int WebViewDestruction::webViewCount()
 {
     COMPtr<IWebKitStatistics> statistics;
     if (FAILED(WebKitCreateInstance(__uuidof(WebKitStatistics), &statistics)))
@@ -52,157 +75,104 @@ static int webViewCount()
     return count;
 }
 
-static void createAndInitializeWebView(COMPtr<IWebView>& outWebView, HostWindow& window, HWND& viewWindow)
+void WebViewDestructionWithHostWindow::SetUp()
 {
-    COMPtr<IWebView> webView;
-    TEST_ASSERT(SUCCEEDED(WebKitCreateInstance(__uuidof(WebView), &webView)));
+    WebViewDestruction::SetUp();
 
-    TEST_ASSERT(window.initialize());
-    TEST_ASSERT(SUCCEEDED(webView->setHostWindow(reinterpret_cast<OLE_HANDLE>(window.window()))));
-    TEST_ASSERT(SUCCEEDED(webView->initWithFrame(window.clientRect(), 0, 0)));
+    EXPECT_TRUE(m_window.initialize());
+    EXPECT_HRESULT_SUCCEEDED(m_webView->setHostWindow(reinterpret_cast<OLE_HANDLE>(m_window.window())));
+    EXPECT_HRESULT_SUCCEEDED(m_webView->initWithFrame(m_window.clientRect(), 0, 0));
 
-    COMPtr<IWebViewPrivate> viewPrivate(Query, webView);
-    TEST_ASSERT(viewPrivate);
-    TEST_ASSERT(SUCCEEDED(viewPrivate->viewWindow(reinterpret_cast<OLE_HANDLE*>(&viewWindow))));
-    TEST_ASSERT(IsWindow(viewWindow));
-
-    outWebView.adoptRef(webView.releaseRef());
+    COMPtr<IWebViewPrivate> viewPrivate(Query, m_webView);
+    ASSERT_NOT_NULL(viewPrivate);
+    EXPECT_HRESULT_SUCCEEDED(viewPrivate->viewWindow(reinterpret_cast<OLE_HANDLE*>(&m_viewWindow)));
+    EXPECT_TRUE(::IsWindow(m_viewWindow));
 }
 
-static void runMessagePump(DWORD timeoutMilliseconds)
+void WebViewDestruction::runMessagePump(DWORD timeoutMilliseconds)
 {
-    DWORD startTickCount = GetTickCount();
+    // FIXME: We should move this functionality to PlatformUtilities at some point.
+
+    DWORD startTickCount = ::GetTickCount();
     MSG msg;
     BOOL result;
-    while ((result = PeekMessageW(&msg, 0, 0, 0, PM_REMOVE)) && GetTickCount() - startTickCount <= timeoutMilliseconds) {
+    while ((result = ::PeekMessageW(&msg, 0, 0, 0, PM_REMOVE)) && ::GetTickCount() - startTickCount <= timeoutMilliseconds) {
         if (result == -1)
             break;
-        TranslateMessage(&msg);
-        DispatchMessage(&msg);
+        ::TranslateMessage(&msg);
+        ::DispatchMessage(&msg);
     }
 }
 
-static void finishWebViewDestructionTest(COMPtr<IWebView>& webView, HWND viewWindow)
+void WebViewDestruction::TearDown()
 {
     // Allow window messages to be processed, because in some cases that would trigger a crash (e.g., <http://webkit.org/b/32827>).
     runMessagePump(50);
 
     // We haven't crashed. Release the WebView and ensure that its view window has been destroyed and the WebView doesn't leak.
     int currentWebViewCount = webViewCount();
-    TEST_ASSERT(currentWebViewCount > 0);
+    EXPECT_GT(currentWebViewCount, 0);
 
-    webView = 0;
+    m_webView = 0;
 
-    TEST_ASSERT(webViewCount() == currentWebViewCount - 1);
-    TEST_ASSERT(!IsWindow(viewWindow));
+    EXPECT_EQ(webViewCount(), currentWebViewCount - 1);
+}
+
+void WebViewDestructionWithHostWindow::TearDown()
+{
+    WebViewDestruction::TearDown();
+
+    EXPECT_FALSE(::IsWindow(m_viewWindow));
 }
 
 // Tests that releasing a WebView without calling IWebView::initWithFrame works.
-TEST(WebViewDestruction, NoInitWithFrame)
+TEST_F(WebViewDestruction, NoInitWithFrame)
 {
-    COMPtr<IWebView> webView;
-    TEST_ASSERT(SUCCEEDED(WebKitCreateInstance(__uuidof(WebView), &webView)));
-
-    finishWebViewDestructionTest(webView, 0);
 }
 
-TEST(WebViewDestruction, CloseWithoutInitWithFrame)
+TEST_F(WebViewDestruction, CloseWithoutInitWithFrame)
 {
-    COMPtr<IWebView> webView;
-    TEST_ASSERT(SUCCEEDED(WebKitCreateInstance(__uuidof(WebView), &webView)));
-
-    TEST_ASSERT(SUCCEEDED(webView->close()));
-
-    finishWebViewDestructionTest(webView, 0);
+    EXPECT_HRESULT_SUCCEEDED(m_webView->close());
 }
 
 // Tests that calling IWebView::close without calling DestroyWindow, then releasing a WebView doesn't crash. <http://webkit.org/b/32827>
-TEST(WebViewDestruction, CloseWithoutDestroyViewWindow)
+TEST_F(WebViewDestructionWithHostWindow, CloseWithoutDestroyViewWindow)
 {
-    COMPtr<IWebView> webView;
-    HostWindow window;
-    HWND viewWindow;
-    createAndInitializeWebView(webView, window, viewWindow);
-
-    TEST_ASSERT(SUCCEEDED(webView->close()));
-
-    finishWebViewDestructionTest(webView, viewWindow);
+    EXPECT_HRESULT_SUCCEEDED(m_webView->close());
 }
 
-TEST(WebViewDestruction, DestroyViewWindowWithoutClose)
+TEST_F(WebViewDestructionWithHostWindow, DestroyViewWindowWithoutClose)
 {
-    COMPtr<IWebView> webView;
-    HostWindow window;
-    HWND viewWindow;
-    createAndInitializeWebView(webView, window, viewWindow);
-
-    DestroyWindow(viewWindow);
-
-    finishWebViewDestructionTest(webView, viewWindow);
+    ::DestroyWindow(m_viewWindow);
 }
 
-TEST(WebViewDestruction, CloseThenDestroyViewWindow)
+TEST_F(WebViewDestructionWithHostWindow, CloseThenDestroyViewWindow)
 {
-    COMPtr<IWebView> webView;
-    HostWindow window;
-    HWND viewWindow;
-    createAndInitializeWebView(webView, window, viewWindow);
-
-    TEST_ASSERT(SUCCEEDED(webView->close()));
-    DestroyWindow(viewWindow);
-
-    finishWebViewDestructionTest(webView, viewWindow);
+    EXPECT_HRESULT_SUCCEEDED(m_webView->close());
+    ::DestroyWindow(m_viewWindow);
 }
 
-TEST(WebViewDestruction, DestroyViewWindowThenClose)
+TEST_F(WebViewDestructionWithHostWindow, DestroyViewWindowThenClose)
 {
-    COMPtr<IWebView> webView;
-    HostWindow window;
-    HWND viewWindow;
-    createAndInitializeWebView(webView, window, viewWindow);
-
-    DestroyWindow(viewWindow);
-    TEST_ASSERT(SUCCEEDED(webView->close()));
-
-    finishWebViewDestructionTest(webView, viewWindow);
+    ::DestroyWindow(m_viewWindow);
+    EXPECT_HRESULT_SUCCEEDED(m_webView->close());
 }
 
-TEST(WebViewDestruction, DestroyHostWindow)
+TEST_F(WebViewDestructionWithHostWindow, DestroyHostWindow)
 {
-    COMPtr<IWebView> webView;
-    HostWindow window;
-    HWND viewWindow;
-    createAndInitializeWebView(webView, window, viewWindow);
-
-    DestroyWindow(window.window());
-
-    finishWebViewDestructionTest(webView, viewWindow);
+    ::DestroyWindow(m_window.window());
 }
 
-TEST(WebViewDestruction, DestroyHostWindowThenClose)
+TEST_F(WebViewDestructionWithHostWindow, DestroyHostWindowThenClose)
 {
-    COMPtr<IWebView> webView;
-    HostWindow window;
-    HWND viewWindow;
-    createAndInitializeWebView(webView, window, viewWindow);
-
-    DestroyWindow(window.window());
-    TEST_ASSERT(SUCCEEDED(webView->close()));
-
-    finishWebViewDestructionTest(webView, viewWindow);
+    ::DestroyWindow(m_window.window());
+    EXPECT_HRESULT_SUCCEEDED(m_webView->close());
 }
 
-TEST(WebViewDestruction, CloseThenDestroyHostWindow)
+TEST_F(WebViewDestructionWithHostWindow, CloseThenDestroyHostWindow)
 {
-    COMPtr<IWebView> webView;
-    HostWindow window;
-    HWND viewWindow;
-    createAndInitializeWebView(webView, window, viewWindow);
-
-    TEST_ASSERT(SUCCEEDED(webView->close()));
-    DestroyWindow(window.window());
-
-    finishWebViewDestructionTest(webView, viewWindow);
+    EXPECT_HRESULT_SUCCEEDED(m_webView->close());
+    ::DestroyWindow(m_window.window());
 }
 
 } // namespace WebKitAPITest
